[gd_scene load_steps=72 format=3 uid="uid://tacb7ydmc5ot"]

[ext_resource type="Texture2D" uid="uid://d3mvkbkjmurdd" path="res://Objects/Characters/Perry/Perry.png" id="1_daafu"]
[ext_resource type="Script" path="res://Scripts/Player Management/Player.gd" id="1_gh08y"]
[ext_resource type="AudioStream" uid="uid://b18ko5l6d7tgi" path="res://Audio/SFX/sfx_run.ogg" id="3_3lfpu"]
[ext_resource type="AudioStream" uid="uid://dgfiwjm8e2p5m" path="res://Audio/SFX/sfx_walk.ogg" id="3_560xq"]
[ext_resource type="AudioStream" uid="uid://cas1ohaiuqy8l" path="res://Audio/SFX/sfx_died.mp3" id="4_tri8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cejif"]
size = Vector2(13.0216, 19.9693)

[sub_resource type="CircleShape2D" id="CircleShape2D_mctnp"]
radius = 14.0657

[sub_resource type="CircleShape2D" id="CircleShape2D_f3lby"]
radius = 13.0896

[sub_resource type="CircleShape2D" id="CircleShape2D_868dq"]
radius = 10.5119

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74pw4"]
size = Vector2(5.08115, 19.8849)

[sub_resource type="Animation" id="Animation_nnb8p"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_owsgf"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 2, 2, 3, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_2ulgp"]
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21]
}

[sub_resource type="Animation" id="Animation_7ln2o"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AttackBox/DownAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../HurtBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.460159, 2.54674), Vector2(0.0959706, -4.14112), Vector2(0.537913, -0.517201)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../HurtBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.63), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_mmxhh"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AttackBox/FrontBackAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_memec"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AttackBox/UpAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_dfrbf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../AttackBox/DownAttack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AttackBox/FrontBackAttack:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AttackBox/UpAttack:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../HurtBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0146694, 3.06178)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../HurtBox/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e7a40"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 22, 22, 22]
}

[sub_resource type="Animation" id="Animation_g2ell"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_ba2v7"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gowsm"]
_data = {
"Grab": SubResource("Animation_nnb8p"),
"Idle": SubResource("Animation_owsgf"),
"Jump": SubResource("Animation_2ulgp"),
"Parry_D": SubResource("Animation_7ln2o"),
"Parry_F": SubResource("Animation_mmxhh"),
"Parry_U": SubResource("Animation_memec"),
"RESET": SubResource("Animation_dfrbf"),
"Slide": SubResource("Animation_e7a40"),
"Walk": SubResource("Animation_g2ell"),
"Wall_Slide": SubResource("Animation_ba2v7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4p88l"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5k8r3"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8bd6j"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_btysm"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_om6lk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4p88l")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_5k8r3")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_8bd6j")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_btysm")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m3mmd"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uv70n"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vdywv"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ptig"]
animation = &"Jump"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_djd37"]
blend_point_0/node = SubResource("AnimationNodeAnimation_m3mmd")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_uv70n")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_vdywv")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_3ptig")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5c4rn"]
animation = &"Parry_D"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vw1g0"]
animation = &"Parry_D"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kbdmm"]
animation = &"Parry_D"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lsscj"]
animation = &"Parry_D"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xwbay"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5c4rn")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_vw1g0")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_kbdmm")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lsscj")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cf4n7"]
animation = &"Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_et172"]
animation = &"Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3bth3"]
animation = &"Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k0i7a"]
animation = &"Slide"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_rvxly"]
blend_point_0/node = SubResource("AnimationNodeAnimation_cf4n7")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_et172")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_3bth3")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_k0i7a")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j0t45"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c2185"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u05mu"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rw02k"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gaiub"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j0t45")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_c2185")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_u05mu")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_rw02k")
blend_point_3/pos = Vector2(0, 1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gvka8"]
animation = &"Wall_Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i8xql"]
animation = &"Wall_Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lbbxc"]
animation = &"Wall_Slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_itcoi"]
animation = &"Wall_Slide"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gnxi6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gvka8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_i8xql")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_lbbxc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_itcoi")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bgdlo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6j6p8"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1g2x4"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xbsqd"]
advance_mode = 2
advance_condition = &"parry"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ljxw6"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j65v3"]
advance_mode = 2
advance_condition = &"parry"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7c8o6"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rxhbe"]
advance_mode = 2
advance_condition = &"sliding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qks4c"]
switch_mode = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lcom4"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0jnwx"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jrag5"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ii4k7"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4m2p4"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2ay5s"]
advance_mode = 2
advance_condition = &"parry"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2pf7a"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kbct5"]
switch_mode = 2
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m3xb4"]
advance_mode = 2
advance_condition = &"walling"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sg88x"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_oa8c3"]
states/End/position = Vector2(865, 98)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_om6lk")
states/Idle/position = Vector2(496, 98)
states/Jump/node = SubResource("AnimationNodeBlendSpace2D_djd37")
states/Jump/position = Vector2(366, -36)
states/Parry/node = SubResource("AnimationNodeBlendSpace2D_xwbay")
states/Parry/position = Vector2(366, 234)
states/Slide/node = SubResource("AnimationNodeBlendSpace2D_rvxly")
states/Slide/position = Vector2(547, -36)
states/Start/position = Vector2(216, 98)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_gaiub")
states/Walk/position = Vector2(667, 98)
states/Walling/node = SubResource("AnimationNodeBlendSpace2D_gnxi6")
states/Walling/position = Vector2(719, -36)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_bgdlo"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_6j6p8"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_1g2x4"), "Idle", "Parry", SubResource("AnimationNodeStateMachineTransition_xbsqd"), "Parry", "Idle", SubResource("AnimationNodeStateMachineTransition_ljxw6"), "Walk", "Parry", SubResource("AnimationNodeStateMachineTransition_j65v3"), "Parry", "Walk", SubResource("AnimationNodeStateMachineTransition_7c8o6"), "Walk", "Slide", SubResource("AnimationNodeStateMachineTransition_rxhbe"), "Slide", "Walk", SubResource("AnimationNodeStateMachineTransition_qks4c"), "Slide", "Idle", SubResource("AnimationNodeStateMachineTransition_lcom4"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_0jnwx"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_jrag5"), "Slide", "Jump", SubResource("AnimationNodeStateMachineTransition_ii4k7"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_4m2p4"), "Jump", "Parry", SubResource("AnimationNodeStateMachineTransition_2ay5s"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_2pf7a"), "Parry", "Jump", SubResource("AnimationNodeStateMachineTransition_kbct5"), "Walk", "Walling", SubResource("AnimationNodeStateMachineTransition_m3xb4"), "Walling", "Walk", SubResource("AnimationNodeStateMachineTransition_sg88x")]
graph_offset = Vector2(106, -82)

[node name="Perry" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(2, 2)
script = ExtResource("1_gh08y")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture_filter = 1
position = Vector2(0.555681, -2.08239)
texture = ExtResource("1_daafu")
hframes = 6
vframes = 5
frame = 3
region_rect = Rect2(8, 17, 13, 23)
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "C:/Users/CaptnJayce/Projects/Aseprite/ParryTheFloor/Anims/Perry.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "0e50f59e1c080d6683b56e458bc7e093"

[node name="PhysicsBox" type="CollisionShape2D" parent="."]
position = Vector2(0.0781392, 2.9432)
scale = Vector2(1.004, 1)
shape = SubResource("RectangleShape2D_cejif")

[node name="AttackBox" type="Area2D" parent="."]

[node name="FrontBackAttack" type="CollisionShape2D" parent="AttackBox" groups=["Attack"]]
position = Vector2(1.82428, -2.64865)
shape = SubResource("CircleShape2D_mctnp")
disabled = true

[node name="DownAttack" type="CollisionShape2D" parent="AttackBox" groups=["Attack"]]
position = Vector2(0.0743256, 9.08738)
scale = Vector2(1, 0.78)
shape = SubResource("CircleShape2D_f3lby")
disabled = true

[node name="UpAttack" type="CollisionShape2D" parent="AttackBox" groups=["Attack"]]
position = Vector2(-0.751968, -16.0119)
shape = SubResource("CircleShape2D_868dq")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -0.0975637)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.0146694, 3.06178)
shape = SubResource("RectangleShape2D_74pw4")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Marker2D/Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_gowsm")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Marker2D/Sprite2D")
tree_root = SubResource("AnimationNodeStateMachine_oa8c3")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_moving = false
parameters/conditions/jumping = false
parameters/conditions/parry = false
parameters/conditions/sliding = false
parameters/conditions/walling = false
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Jump/blend_position = Vector2(0, 0)
parameters/Parry/blend_position = Vector2(-0.00265253, -0.00385964)
parameters/Slide/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)
parameters/Walling/blend_position = Vector2(-0.000884175, -0.00484574)

[node name="SprintSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3lfpu")

[node name="WalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_560xq")

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tri8g")

[connection signal="area_entered" from="AttackBox" to="." method="_on_attack_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
